--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,50 @@
 *{
-    font-family: "Open Sans", sans-serif;
+  margin: 0; 
+padding: 0;
+box-sizing: border-box;
+}
+body{
+ font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
+}
+header{
+  background-color: #ffffff;
+  padding-right: 136px;
+  padding-left: 163px;
+}
+
+nav{
+    background-color: #ffffff;
+    width:100%;
+    max-width: 1600px;
+    margin:0px auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    align-items: center;
+}
+.all-button{
+  background-color: #469165;
+  padding: 12px 16px;
+  font-size: 16px;
+  width: 164px;
+  height: 44px;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600px;
+  color: #ffffff;
+}
+
+nav .menu{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    text-align: center;
+    gap:32px;
+
+}
+nav .menu a{
+  color:#000000;
+  font-size: 16px;
+  text-decoration: none;
 }
