--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,7 @@ nav{
   max-width: 1600px;
   height: 674px;
   display: flex;
+  
 }
 .hero-content{
 margin: 115px 120px;
@@ -98,8 +99,8 @@ span{
 }
 nav .menu{
     display: flex;
-    list-style: none;
     align-items: center;
+    list-style: none;
     text-align: center;
     gap:32px;
 
@@ -109,16 +110,24 @@ nav .menu a{
   font-size: 16px;
   text-decoration: none;
 }
+.menu li a{
+  text-align: center;
+  display: flex;
+}
 .hero-area{
   width: 100%;
   max-width: 1600px;
 }
 #feature{
-  width: 1360px;
-  height: 116px;
+  width: 1600px;
+  height: 448px;
   padding: 120px 120px 120px;
   gap: 44px;
   display: flex;
+  word-wrap: wrap;
+  background-color: aqua;
+  margin-top: 130px;
+
   
 }
 #feature h2{
@@ -127,18 +136,87 @@ nav .menu a{
   align-items: center;
 }
 .feature-box {
-  width: 322px;
+  max-width: 1360px;
   height: 300px;
   gap: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.feature-card{
+  width: 322px;
+  height: 300px;
+  box-shadow: 10px 2px 15px rgb(155, 135, 135);
+  font-size: 24px;
+  font-weight: 600px;
+  line-height: 100%;
+  justify-content: space-between;
+}
+.feature-card h3{
+  text-align: center;
+}
+.feature-card p{
+  font-size: 16px;
+  font-weight: 400px;
+  line-height: 20px;
+  text-align: center;
+}
+.feature-card img{
+  width: 60px;
+  height: 60px;
+}
+#solution{
+  width: 100%;
+  max-width: 1600px;
+  height: 840px;
+  gap: 40px;
+  display: flex;
+  padding: 120px;
+}
+#solution .picture{
+  width: 600px;
+  height: 600px;
+  gap: 60px;
+}
+.solution-text{
+  width:700px ;
+  height: 396px;
+  gap: 40px;
+}
+.solution-text h2{
+  font-size: 48px;
+  line-height: 100%;
+  
+}
+.solution-text p{
+  font-size: 16px;
+  line-height: 20px;
+  color: #627382;
+  padding-top: 16px;
+  padding-bottom: 20px;
+  word-wrap: wrap;
+}
+ .solution-text p{
+display: flex;
+color: black;
+}
+.solution-text h4{
+  color: #469165;
+  font-size: 16px;
+  line-height: 20px;
+}
 .footer{
   background-color: #001931;
   width: 100%;
   max-width: 1600px;
+  height: 448px;
+  padding: 120px 120px 120px;
+  gap: 44px;
 }
-.footer i{
+
+
+.footer p{
   color: #ffffff;
+  width: 1360px;
+  padding-bottom: 0;
 }
