--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 body{
  font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
-  background-size: cover;
+  
 
 }
 header{
@@ -24,6 +24,7 @@ nav{
     justify-content: space-between;
     padding: 16px;
     align-items: center;
+    vertical-align: middle;
 }
 .all-button{
   background-color: #469165;
@@ -37,11 +38,13 @@ nav{
   color: #ffffff;
 }
 .hero-area{
+  background-size: cover;
   background-image: url(../images/cropped-hands-woman-writing-book\ 1.png);
-  width: 100%;
-  max-width: 1600px;
+  width: 1600px;
   height: 674px;
   display: flex;
+  gap: 40px;
+  margin: 0 auto;
   
 }
 .hero-content{
@@ -123,12 +126,17 @@ nav .menu a{
   height: 448px;
   padding: 120px 120px 120px;
   gap: 44px;
-  display: flex;
+  
   word-wrap: wrap;
-  background-color: aqua;
   margin-top: 130px;
 
   
+}
+.feature-heading{
+  text-align: center;
+  vertical-align: middle;
+  margin-bottom: 44px;
+
 }
 #feature h2{
   font-size: 48px;
@@ -146,15 +154,25 @@ nav .menu a{
 .feature-card{
   width: 322px;
   height: 300px;
-  box-shadow: 10px 2px 15px rgb(155, 135, 135);
+  box-shadow: 6px 0px 15px rgb(209, 192, 192);
   font-size: 24px;
   font-weight: 600px;
   line-height: 100%;
-  justify-content: space-between;
+  padding: 20px;
+
 }
 .feature-card h3{
   text-align: center;
+  margin-bottom: 16px;
+
 }
+
+.icon{
+  text-align: center;
+  margin-top: 69px;
+}
+
+
 .feature-card p{
   font-size: 16px;
   font-weight: 400px;
@@ -205,18 +223,68 @@ color: black;
   font-size: 16px;
   line-height: 20px;
 }
+.last{
+  width: 1360px;
+  display: flex;
+  vertical-align: middle;
+
+}
+.last .get-ready{
+  background-color: #F7F6F2;
+  width: 70%;
+  height: 384px;
+  text-align: center;
+
+}
+.get-ready .content{
+  margin-top: 80px;
+}
+.get-ready h2{
+  font-size: 40px;
+  font-weight: bold;
+}
+.get-ready p{
+  color: #627382;
+  line-height: 24px;
+  margin-bottom: 24px;
+}
 .footer{
   background-color: #001931;
-  width: 100%;
+  width: 1360px;
   max-width: 1600px;
   height: 448px;
   padding: 120px 120px 120px;
   gap: 44px;
+  
+
 }
 
-
-.footer p{
+.footer .social{
   color: #ffffff;
+  display: inline-block;
+  justify-content: space-between;
+
+  
+}
+.logo-social{
+  display: flex;
+  justify-content: space-around;
+}
+.social{
+  font-size: 20px;
+  vertical-align: center;
+  line-height: 28px;
+  padding-right: ;
+}
+.copyright{
   width: 1360px;
-  padding-bottom: 0;
+  height: 54px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 200px;
+  line-height: 55px;
+  align-items: center;
+  padding-left: 120px;
+  padding-right: 120px;
+  
 }
